codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__misalignment_turn_end_cleared_composer.snap
---
source: tui/src/chatwidget/tests/misalignment_policy_tests.rs
assertion_line: 236
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
› Ask Zuno to do anything

  esc esc to edit previous message
